# UniqueWordsCounter

./: .gitignore  CMakeLists.txt  README.md  run.sh
inc/: Exceptions.h  FileChunksReader.h  TextSplitter.h  TypeDefs.h  UniqueWordsCounter.h
src/: Exceptions.cpp  FileChunksReader.cpp  TextSplitter.cpp  UniqueWordsCounter.cpp  main.cpp
test/: smallfile.txt
